target/generated-sources/antlr4/com/kiraged/script/parser/KiragedScriptParser.java
// Generated from com\kiraged\script\parser\KiragedScript.g4 by ANTLR 4.8
package com.kiraged.script.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KiragedScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OP_ADD=1, OP_SUB=2, OP_MUL=3, OP_DIV=4, ASSIGN=5, NOT_EQUALS=6, EQUALS=7, 
		GREATER_THAN=8, GREATER_THAN_EQ=9, LOWER_THAN=10, LOWER_THAN_EQ=11, AND=12, 
		OR=13, COMMA=14, SEMICOLON=15, START_PARENTHESIS=16, END_PARENTHESIS=17, 
		START_BLOCK_STATEMENT=18, END_BLOCK_STATEMENT=19, BOOLEAN_TRUE=20, BOOLEAN_FALSE=21, 
		DOUBLE_SEPERATION=22, VOID_KEYWORD=23, TYPE=24, WHILE_KEYWORD=25, IF_KEYWORD=26, 
		ELSE_KEYWORD=27, INT_KEYWORD=28, DOUBLE_KEYWORD=29, BOOLEAN_KEYWORD=30, 
		VAR_KEYWORD=31, RETURN_KEYWORD=32, INT=33, DOUBLE=34, BOOLEAN=35, ID=36, 
		WS=37, COMMENT=38, LINE_COMMENT=39;
	public static final int
		RULE_compileUnit = 0, RULE_functionDecl = 1, RULE_parameterDecl = 2, RULE_statement = 3, 
		RULE_blockStatement = 4, RULE_expr = 5;
	private static String[] makeRuleNames() {
		return new String[] {
			"compileUnit", "functionDecl", "parameterDecl", "statement", "blockStatement", 
			"expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'='", "'!='", "'=='", "'>'", "'>='", 
			"'<'", "'<='", "'&&'", "'||'", "','", "';'", "'('", "')'", "'{'", "'}'", 
			"'true'", "'false'", "'.'", "'void'", null, "'while'", "'if'", "'else'", 
			"'int'", "'double'", "'boolean'", "'var'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OP_ADD", "OP_SUB", "OP_MUL", "OP_DIV", "ASSIGN", "NOT_EQUALS", 
			"EQUALS", "GREATER_THAN", "GREATER_THAN_EQ", "LOWER_THAN", "LOWER_THAN_EQ", 
			"AND", "OR", "COMMA", "SEMICOLON", "START_PARENTHESIS", "END_PARENTHESIS", 
			"START_BLOCK_STATEMENT", "END_BLOCK_STATEMENT", "BOOLEAN_TRUE", "BOOLEAN_FALSE", 
			"DOUBLE_SEPERATION", "VOID_KEYWORD", "TYPE", "WHILE_KEYWORD", "IF_KEYWORD", 
			"ELSE_KEYWORD", "INT_KEYWORD", "DOUBLE_KEYWORD", "BOOLEAN_KEYWORD", "VAR_KEYWORD", 
			"RETURN_KEYWORD", "INT", "DOUBLE", "BOOLEAN", "ID", "WS", "COMMENT", 
			"LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KiragedScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KiragedScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompileUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(KiragedScriptParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compileUnit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitCompileUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompileUnitContext compileUnit() throws RecognitionException {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << START_PARENTHESIS) | (1L << START_BLOCK_STATEMENT) | (1L << BOOLEAN_TRUE) | (1L << BOOLEAN_FALSE) | (1L << VOID_KEYWORD) | (1L << TYPE) | (1L << WHILE_KEYWORD) | (1L << IF_KEYWORD) | (1L << VAR_KEYWORD) | (1L << RETURN_KEYWORD) | (1L << INT) | (1L << DOUBLE) | (1L << ID))) != 0)) {
				{
				setState(14);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(12);
					statement();
					}
					break;
				case 2:
					{
					setState(13);
					functionDecl();
					}
					break;
				}
				}
				setState(18);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(19);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclContext extends ParserRuleContext {
		public Token returnType;
		public Token func;
		public TerminalNode START_PARENTHESIS() { return getToken(KiragedScriptParser.START_PARENTHESIS, 0); }
		public TerminalNode END_PARENTHESIS() { return getToken(KiragedScriptParser.END_PARENTHESIS, 0); }
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public TerminalNode ID() { return getToken(KiragedScriptParser.ID, 0); }
		public TerminalNode VOID_KEYWORD() { return getToken(KiragedScriptParser.VOID_KEYWORD, 0); }
		public TerminalNode TYPE() { return getToken(KiragedScriptParser.TYPE, 0); }
		public List<ParameterDeclContext> parameterDecl() {
			return getRuleContexts(ParameterDeclContext.class);
		}
		public ParameterDeclContext parameterDecl(int i) {
			return getRuleContext(ParameterDeclContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(KiragedScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KiragedScriptParser.COMMA, i);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21);
			((FunctionDeclContext)_localctx).returnType = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==VOID_KEYWORD || _la==TYPE) ) {
				((FunctionDeclContext)_localctx).returnType = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(22);
			((FunctionDeclContext)_localctx).func = match(ID);
			setState(23);
			match(START_PARENTHESIS);
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(24);
				parameterDecl();
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(30);
				match(COMMA);
				setState(31);
				parameterDecl();
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(37);
			match(END_PARENTHESIS);
			setState(38);
			blockStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterDeclContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(KiragedScriptParser.TYPE, 0); }
		public TerminalNode ID() { return getToken(KiragedScriptParser.ID, 0); }
		public ParameterDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitParameterDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterDeclContext parameterDecl() throws RecognitionException {
		ParameterDeclContext _localctx = new ParameterDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parameterDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(TYPE);
			setState(41);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprStmtContext extends StatementContext {
		public ExprContext stmtExpr;
		public TerminalNode SEMICOLON() { return getToken(KiragedScriptParser.SEMICOLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitExprStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileStmtContext extends StatementContext {
		public TerminalNode WHILE_KEYWORD() { return getToken(KiragedScriptParser.WHILE_KEYWORD, 0); }
		public TerminalNode START_PARENTHESIS() { return getToken(KiragedScriptParser.START_PARENTHESIS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode END_PARENTHESIS() { return getToken(KiragedScriptParser.END_PARENTHESIS, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public WhileStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitWhileStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignVarStmtContext extends StatementContext {
		public TerminalNode ID() { return getToken(KiragedScriptParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(KiragedScriptParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(KiragedScriptParser.SEMICOLON, 0); }
		public AssignVarStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitAssignVarStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfStmtContext extends StatementContext {
		public TerminalNode IF_KEYWORD() { return getToken(KiragedScriptParser.IF_KEYWORD, 0); }
		public TerminalNode START_PARENTHESIS() { return getToken(KiragedScriptParser.START_PARENTHESIS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode END_PARENTHESIS() { return getToken(KiragedScriptParser.END_PARENTHESIS, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE_KEYWORD() { return getToken(KiragedScriptParser.ELSE_KEYWORD, 0); }
		public IfStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockStmtContext extends StatementContext {
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public BlockStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitBlockStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnStmtContext extends StatementContext {
		public TerminalNode RETURN_KEYWORD() { return getToken(KiragedScriptParser.RETURN_KEYWORD, 0); }
		public TerminalNode SEMICOLON() { return getToken(KiragedScriptParser.SEMICOLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitReturnStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarDeclStmtContext extends StatementContext {
		public Token type;
		public Token name;
		public TerminalNode SEMICOLON() { return getToken(KiragedScriptParser.SEMICOLON, 0); }
		public TerminalNode ID() { return getToken(KiragedScriptParser.ID, 0); }
		public TerminalNode TYPE() { return getToken(KiragedScriptParser.TYPE, 0); }
		public TerminalNode VAR_KEYWORD() { return getToken(KiragedScriptParser.VAR_KEYWORD, 0); }
		public TerminalNode ASSIGN() { return getToken(KiragedScriptParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarDeclStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitVarDeclStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		int _la;
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new BlockStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				blockStatement();
				}
				break;
			case 2:
				_localctx = new VarDeclStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				((VarDeclStmtContext)_localctx).type = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==TYPE || _la==VAR_KEYWORD) ) {
					((VarDeclStmtContext)_localctx).type = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(45);
				((VarDeclStmtContext)_localctx).name = match(ID);
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(46);
					match(ASSIGN);
					setState(47);
					expr(0);
					}
				}

				setState(50);
				match(SEMICOLON);
				}
				break;
			case 3:
				_localctx = new AssignVarStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				match(ID);
				setState(52);
				match(ASSIGN);
				setState(53);
				expr(0);
				setState(54);
				match(SEMICOLON);
				}
				break;
			case 4:
				_localctx = new ReturnStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(56);
				match(RETURN_KEYWORD);
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << START_PARENTHESIS) | (1L << BOOLEAN_TRUE) | (1L << BOOLEAN_FALSE) | (1L << INT) | (1L << DOUBLE) | (1L << ID))) != 0)) {
					{
					setState(57);
					expr(0);
					}
				}

				setState(60);
				match(SEMICOLON);
				}
				break;
			case 5:
				_localctx = new IfStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(61);
				match(IF_KEYWORD);
				setState(62);
				match(START_PARENTHESIS);
				setState(63);
				expr(0);
				setState(64);
				match(END_PARENTHESIS);
				setState(65);
				statement();
				setState(68);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(66);
					match(ELSE_KEYWORD);
					setState(67);
					statement();
					}
					break;
				}
				}
				break;
			case 6:
				_localctx = new WhileStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(70);
				match(WHILE_KEYWORD);
				setState(71);
				match(START_PARENTHESIS);
				setState(72);
				expr(0);
				setState(73);
				match(END_PARENTHESIS);
				setState(74);
				statement();
				}
				break;
			case 7:
				_localctx = new ExprStmtContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(76);
				((ExprStmtContext)_localctx).stmtExpr = expr(0);
				setState(77);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockStatementContext extends ParserRuleContext {
		public TerminalNode START_BLOCK_STATEMENT() { return getToken(KiragedScriptParser.START_BLOCK_STATEMENT, 0); }
		public TerminalNode END_BLOCK_STATEMENT() { return getToken(KiragedScriptParser.END_BLOCK_STATEMENT, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitBlockStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockStatementContext blockStatement() throws RecognitionException {
		BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_blockStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(START_BLOCK_STATEMENT);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << START_PARENTHESIS) | (1L << START_BLOCK_STATEMENT) | (1L << BOOLEAN_TRUE) | (1L << BOOLEAN_FALSE) | (1L << TYPE) | (1L << WHILE_KEYWORD) | (1L << IF_KEYWORD) | (1L << VAR_KEYWORD) | (1L << RETURN_KEYWORD) | (1L << INT) | (1L << DOUBLE) | (1L << ID))) != 0)) {
				{
				{
				setState(82);
				statement();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(END_BLOCK_STATEMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VariableExprContext extends ExprContext {
		public Token value;
		public TerminalNode ID() { return getToken(KiragedScriptParser.ID, 0); }
		public VariableExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitVariableExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DoubleExprContext extends ExprContext {
		public Token value;
		public TerminalNode DOUBLE() { return getToken(KiragedScriptParser.DOUBLE, 0); }
		public DoubleExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitDoubleExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InfixExprContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OP_MUL() { return getToken(KiragedScriptParser.OP_MUL, 0); }
		public TerminalNode OP_DIV() { return getToken(KiragedScriptParser.OP_DIV, 0); }
		public TerminalNode OP_ADD() { return getToken(KiragedScriptParser.OP_ADD, 0); }
		public TerminalNode OP_SUB() { return getToken(KiragedScriptParser.OP_SUB, 0); }
		public InfixExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitInfixExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntExprContext extends ExprContext {
		public Token value;
		public TerminalNode INT() { return getToken(KiragedScriptParser.INT, 0); }
		public IntExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitIntExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncExprContext extends ExprContext {
		public Token func;
		public TerminalNode START_PARENTHESIS() { return getToken(KiragedScriptParser.START_PARENTHESIS, 0); }
		public TerminalNode END_PARENTHESIS() { return getToken(KiragedScriptParser.END_PARENTHESIS, 0); }
		public TerminalNode ID() { return getToken(KiragedScriptParser.ID, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(KiragedScriptParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KiragedScriptParser.COMMA, i);
		}
		public FuncExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitFuncExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BooleanExprContext extends ExprContext {
		public Token value;
		public TerminalNode BOOLEAN_TRUE() { return getToken(KiragedScriptParser.BOOLEAN_TRUE, 0); }
		public TerminalNode BOOLEAN_FALSE() { return getToken(KiragedScriptParser.BOOLEAN_FALSE, 0); }
		public BooleanExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitBooleanExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalExprContext extends ExprContext {
		public ExprContext left;
		public Token op;
		public ExprContext right;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode AND() { return getToken(KiragedScriptParser.AND, 0); }
		public TerminalNode OR() { return getToken(KiragedScriptParser.OR, 0); }
		public LogicalExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitLogicalExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParensExprContext extends ExprContext {
		public TerminalNode START_PARENTHESIS() { return getToken(KiragedScriptParser.START_PARENTHESIS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode END_PARENTHESIS() { return getToken(KiragedScriptParser.END_PARENTHESIS, 0); }
		public ParensExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KiragedScriptVisitor ) return ((KiragedScriptVisitor<? extends T>)visitor).visitParensExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompareExprContext extends ExprContext {
